--- a/socialSuite/pubspec.yaml
+++ b/socialSuite/pubspec.yaml
@@ -19,14 +19,26 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  # Check that you have this dependency (added in the previous step)
+  firebase_core: ^0.4.0+9
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # Add the dependency for the FlutterFire plugin for Google Analytics
+  firebase_analytics: ^5.0.2
+
+  # Add the dependencies for any other Firebase products you want to use in your app
+  # For example, to use Firebase Authentication and Cloud Firestore
+  firebase_auth: ^0.14.0+5
+  cloud_firestore: ^0.13.1+1
+
+  # Other Flutter packages
   cupertino_icons: ^0.1.2
-
+  provider: ^3.1.0
+  flutter_spinkit: "^4.0.0"
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
 
 
 # For information on the generic Dart part of this file, see the
