--- a/socialSuite/pubspec.yaml
+++ b/socialSuite/pubspec.yaml
@@ -21,6 +21,10 @@ dependencies:
     sdk: flutter
   # Check that you have this dependency (added in the previous step)
   firebase_core: ^0.4.0+9
+  flutter_svg: ^0.17.3+1
+  sliding_up_panel: ^1.0.0
+  curved_navigation_bar: ^0.3.2
+  fl_chart: ^0.8.3
 
   # Add the dependency for the FlutterFire plugin for Google Analytics
   firebase_analytics: ^5.0.2
@@ -28,41 +32,38 @@ dependencies:
   # Add the dependencies for any other Firebase products you want to use in your app
   # For example, to use Firebase Authentication and Cloud Firestore
   firebase_auth: ^0.14.0+5
-  cloud_firestore: ^0.13.1+1
+  cloud_firestore: ^0.13.4+1
+  http: ^0.12.0+4
 
   # Other Flutter packages
   cupertino_icons: ^0.1.2
   provider: ^3.1.0
   flutter_spinkit: "^4.0.0"
-  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-    
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/images/
+    - assets/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
